compiler/testData/diagnostics/tests/script/destructuringDeclarationsScript.fir.kts
// !WITH_NEW_INFERENCE
val (a1, a2) = <!COMPONENT_FUNCTION_MISSING, COMPONENT_FUNCTION_MISSING!>A()<!>
val (b1: Int, b2: Int) = <!COMPONENT_FUNCTION_MISSING, COMPONENT_FUNCTION_MISSING!>A()<!>
val (c1) = <!COMPONENT_FUNCTION_MISSING, UNRESOLVED_REFERENCE!>unresolved<!>

<!WRONG_MODIFIER_TARGET!>private<!> val (d1) = <!COMPONENT_FUNCTION_MISSING!>A()<!>

val (e1, _) = <!COMPONENT_FUNCTION_MISSING!>A()<!>

<!UNRESOLVED_REFERENCE!>a1<!>
<!UNRESOLVED_REFERENCE!>a2<!>
<!UNRESOLVED_REFERENCE!>e1<!>

class A {
    operator fun component1() = 1
    operator fun component2() = ""
}